Bug 753742 - Force layer build on scroll frames with a displayport. r=tn

Force building layers for all scroll frames that have a displayport set.
This fixes gfx/layers/ipc/CompositorParent mistakenly using FrameMetrics from
incorrect frames, due to the root scroll frame not having a layer.